--- a/demo.html
+++ b/demo.html
@@ -30,3 +30,8 @@ git remote add origin https://github.com/viptems/Sept23Git.git
   git push -u origin main
 
 -->
+
+<!-- git init
+git status
+git add <fileNmae> / . (all files from current folder)
+  git commit -m ""  -->
