--- a/demo.html
+++ b/demo.html
@@ -25,13 +25,29 @@ distributed
   git remote add origin https://github.com/viptems/Sept23Git.git
   git push -u origin main
 
-git remote add origin https://github.com/viptems/Sept23Git.git
-  git branch -M main
-  git push -u origin main
+
 
 -->
 
 <!-- git init
 git status
 git add <fileNmae> / . (all files from current folder)
-  git commit -m ""  -->
+  git commit -m ""  
+
+git remote add origin https://github.com/viptems/Sept23Git.git
+  git branch -M main
+  git push -u origin main
+
+ ..... to config user
+  git config --global user.email "email"
+  git config --global user.name "name"
+   git config --global editor= code --wait  (to set VSCode as a default editor)
+
+
+  ... to pull 
+  git init 
+  git remote 
+  git branch -m 
+  git pull <URl>
+
+-->
