style applied to p tag

--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
     <script src="Demo.js"></script>
   </head>
   <body>
-    <p>fdkjgkjsdaf</p>
+    <p style="background-color: brown">fdkjgkjsdaf</p>
   </body>
 </html>
 
